--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,9 +3,10 @@ site_name: Sample doc 1.3.22
 theme:
   name: 'material'
 
-site_url: ""
-use_directory_urls: false
-plugin: []
+site_author: 'Namiral'
+site_url: ''
+remote_branch: gh-pages
+edit_uri: 'tree/main/docs/'
 
 # markdown_extensions:
 #   - codehilite
