--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,4 @@ jobs:
       - run: pip install mkdocs-material 
       - run: mkdocs build
       - run: cp redocs/* site/
-      - run: ghp-import site --push
+      - run: ghp-import site
