--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs-material 
+      - run: git pull gh-pages
       - run: mkdocs build
       - run: cp redocs/* site/
-      - run: ghp-import site
+      - run: ghp-import site --push
